data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_389.wast
;; 10. **Test 10: Incorrect Label Depth Reference Leading to Unreachable**    - Establish nested control blocks (block, loop, if) within which the `br` references a misinterpreted depth label resulting in imperfect branching and an `unreachable` instruction placed next.    - Assesses if the `br` implementation misinterprets the depth, leading to the execution of the `unreachable` instruction.

(assert_invalid
  (module
    (func $incorrect-label-depth
      (block (loop
        (block
          (if (i32.const 1)
              (br 3) 
          )
        )
        (unreachable)
      ))
    )
  )
  "unknown label"
)